--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <!--<link rel="stylesheet" href="css/Common.css">-->
 
     <title>Subhash Phadke</title>
 
@@ -32,167 +33,76 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-<header>
-    <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <h4 class="text-white">About</h4>
-                    <p class="text-muted">
-                        My name is Subhash Phadke and I am a Marathi movie Director, Artist, and a Music Lover
-                    </p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <h4 class="text-white">Contact</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="https://www.youtube.com/user/s220254" class="text-white">Subscribe on Youtube</a>
-                        </li>
-                        <li><a href="https://www.facebook.com/Swar-Sadhana-Karaoke-Group-110442127340269"
-                               class="text-white">Like on Facebook</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+
+<header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar">
+    <a class="navbar-brand mr-0 mr-md-2" href="/">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2">
+            <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+            <circle cx="12" cy="13" r="4"></circle>
+        </svg>
+    </a>
+
+    <div class="navbar-nav-scroll">
+        <ul class="navbar-nav bd-navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link active" href="Index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="SwarSadhana.html">SwarSadhana</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="Art.html">Art</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="Movies.html">Movies</a>
+            </li>
+
+        </ul>
+
     </div>
 
-    <div class="navbar navbar-dark bg-dark box-shadow">
-        <div class="container d-flex justify-content-between">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2">
-                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-                    <circle cx="12" cy="13" r="4"></circle>
-                </svg>
-                <strong>Subhash Phadke</strong>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
-                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </div>
 </header>
+
 
 <main role="main">
 
-    <section class="jumbotron text-center">
+    <section class="jumbotron text-center text-dark">
         <div class="container">
-            <h1 class="jumbotron-heading">Swar Sadhana</h1>
-            <p class="lead text-muted">
-                Swar Sadhana is a series of karaoke videos that I have directed, edited and conceptualized with an
-                enthusiastic group of recreational singers. Videos are created and uploaded every two weeks, so
-                subscribe
-                to the channel to receive notifications and the latest updates!
+            <h1 class="jumbotron-heading">Subhash Phadke</h1>
+            <p class="lead">
+            <h5>Director, Artist, Music Lover, Grandfather</h5>
             </p>
-            <p>
-                <a href="#" class="btn btn-primary my-2">Subscribe on Youtube</a>
-            </p>
+
         </div>
     </section>
 
     <div class="album py-5 bg-light">
         <div class="container">
-
-            <div class="row">
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uXTFuUrJk5o"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text" style="color:blue">
-                                18th Episode: Valentines Day Special - Ched Chhaad!
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oBCNhwQZl30"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text"> 17th Episode </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cNiZmCxrh1o"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text"> 16th Episode </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/T5kdl58v-qE"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text"> 15th Episode </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1nVqMBSRF-I"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text"> 14th Episode </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sagpLTG-Tg8"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text"> 13th Episode </p>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
         </div>
     </div>
 
 </main>
 
-
-<footer class="text-muted">
+<footer class="footer">
     <div class="container">
-        <p class="float-right">
-            <a href="#">Back to top</a>
-        </p>
 
-        <p class="text-muted">&copy; 2020 -
-            <script type="text/javascript">
-                var d = new Date()
-                document.write(d.getFullYear())
-            </script>
-            ALL RIGHTS RESERVED
-        </p>
+            <ul class="nav justify-content-center">
+            <li class="nav-item">
+            <a class="nav-link text-primary" href="https://www.facebook.com/subhash.phadke.5/about">Facebook</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-primary" href="https://www.youtube.com/user/s220254">Youtube</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-primary" href="https://www.linkedin.com/in/subhash-phadke-26292737/">Linkedin</a>
+            </li>
+            </ul>
 
+        </span>
     </div>
 </footer>
 
 </body>
 </html>
+
