Major commit - all pages functional to go-live

--- a/src/SwarSadhana.html
+++ b/src/SwarSadhana.html
@@ -6,7 +6,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
-    <!--<link rel="stylesheet" href="css/Common.css">-->
 
     <title>Subhash Phadke</title>
 
@@ -14,25 +13,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!--Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 </head>
 
 <body>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-
 
 <header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar">
     <a class="navbar-brand mr-0 mr-md-2" href="/">
@@ -94,12 +77,13 @@
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uXTFuUrJk5o"
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H3vfi2zjBII"
                                     allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
-                            <p class="card-text" style="color:blue">
-                                18th Episode: Valentines Day Special - Ched Chhaad!
+                            <p class="card-text  ">
+                            <div class="text-primary text-center">Episode: 18</div>
+                            <div class="text-dark text-center">Valentines Day - Ched Chhaad!</div>
                             </p>
                         </div>
                     </div>
@@ -112,7 +96,10 @@
                                     allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
-                            <p class="card-text"> 17th Episode </p>
+                            <p class="card-text  ">
+                            <div class="text-primary text-center">Episode: 17</div>
+                            <div class="text-dark text-center">Songs on Vehicles</div>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -124,7 +111,10 @@
                                     allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
-                            <p class="card-text"> 16th Episode </p>
+                            <p class="card-text  ">
+                            <div class="text-primary text-center">Episode: 16</div>
+                            <div class="text-dark text-center">Sawal pe Sawal</div>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +126,10 @@
                                     allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
-                            <p class="card-text"> 15th Episode </p>
+                            <p class="card-text  ">
+                            <div class="text-primary text-center">Episode: 15</div>
+                            <div class="text-dark text-center">Navras</div>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -148,7 +141,10 @@
                                     allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
-                            <p class="card-text"> 14th Episode </p>
+                            <p class="card-text  ">
+                            <div class="text-primary text-center">Episode: 14</div>
+                            <div class="text-dark text-center">Five Elements</div>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -160,7 +156,10 @@
                                     allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
-                            <p class="card-text"> 13th Episode </p>
+                            <p class="card-text  ">
+                            <div class="text-primary text-center">Episode: 13</div>
+                            <div class="text-dark text-center"></div>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -174,20 +173,19 @@
 
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link text-primary" href="https://www.facebook.com/subhash.phadke.5/about">Facebook</a>
+                <a class="nav-link text-primary" target="_blank" href="https://www.facebook.com/subhash.phadke.5/about">Facebook</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-primary" href="https://www.youtube.com/user/s220254">Youtube</a>
+                <a class="nav-link text-primary" target="_blank" href="https://www.youtube.com/user/s220254">Youtube</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-primary" href="https://www.linkedin.com/in/subhash-phadke-26292737/">Linkedin</a>
+                <a class="nav-link text-primary" target="_blank"
+                   href="https://www.linkedin.com/in/subhash-phadke-26292737/">Linkedin</a>
             </li>
         </ul>
 
-        </span>
     </div>
 </footer>
-
 
 
 </body>
