--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
-    <!--<link rel="stylesheet" href="css/Common.css">-->
 
     <title>Subhash Phadke</title>
 
@@ -14,28 +13,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!--Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 </head>
 
 <body>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-
-
 <header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar">
-    <a class="navbar-brand mr-0 mr-md-2" href="/">
+    <a class="navbar-brand mr-0 mr-md-2" href="/swarsadhana/src/index.html">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2">
             <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
@@ -49,17 +32,15 @@
                 <a class="nav-link active" href="Index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="SwarSadhana.html">SwarSadhana</a>
+                <a class="nav-link" href="SwarSadhana.html">SwarSadhana</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="Art.html">Art</a>
+                <a class="nav-link" href="Art.html">Art</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="Movies.html">Movies</a>
+                <a class="nav-link" href="Movies.html">Movies</a>
             </li>
-
         </ul>
-
     </div>
 
 </header>
@@ -77,8 +58,36 @@
         </div>
     </section>
 
-    <div class="album py-5 bg-light">
-        <div class="container">
+    <div class="card-group">
+        <div class="card">
+            <a href="SwarSadhana.html">
+                <img class="card-img-top" src="resources/Music.jpg">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title text-center">Swar Sadhana</h5>
+                <p class="card-text text-center">Checkout Our Karaoke Group Of Enthusiastic Singers</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <a href="Art.html">
+                <img class="card-img-top" src="resources/Art.jpg" href="Art.html">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title text-center">Art</h5>
+                <p class="card-text text-center">Browse Through My Art Collection</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <a href="Movies.html">
+                <img class="card-img-top" src="resources/Movies.jpg" href="Movies.html">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title text-center">Movies</h5>
+                <p class="card-text text-center">My Movies</p>
+            </div>
+
         </div>
     </div>
 
@@ -87,19 +96,19 @@
 <footer class="footer">
     <div class="container">
 
-            <ul class="nav justify-content-center">
+        <ul class="nav justify-content-center">
             <li class="nav-item">
-            <a class="nav-link text-primary" href="https://www.facebook.com/subhash.phadke.5/about">Facebook</a>
+                <a class="nav-link text-primary" target="_blank" href="https://www.facebook.com/subhash.phadke.5/about">Facebook</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link text-primary" href="https://www.youtube.com/user/s220254">Youtube</a>
+                <a class="nav-link text-primary" target="_blank" href="https://www.youtube.com/user/s220254">Youtube</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link text-primary" href="https://www.linkedin.com/in/subhash-phadke-26292737/">Linkedin</a>
+                <a class="nav-link text-primary" target="_blank"
+                   href="https://www.linkedin.com/in/subhash-phadke-26292737/">Linkedin</a>
             </li>
-            </ul>
+        </ul>
 
-        </span>
     </div>
 </footer>
 
