--- a/Art.html
+++ b/Art.html
@@ -29,7 +29,7 @@
     <div class="navbar-nav-scroll ">
         <ul class="navbar-nav bd-navbar-nav ml-lg-auto">
             <li class="nav-item">
-                <a class="nav-link " href="Index.html">Home</a>
+                <a class="nav-link " href="/">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " href="SwarSadhana.html">SwarSadhana</a>
