Fixed Home page navigation and links to youtube/FB to open in new window

--- a/SwarSadhana.html
+++ b/SwarSadhana.html
@@ -58,10 +58,10 @@
 
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.youtube.com/c/subhashphadke/videos">Subscribe on Youtube</a>
+                    <a class="nav-link" target="_blank" href="https://www.youtube.com/c/subhashphadke/videos">Subscribe on Youtube</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.facebook.com/Swar-Sadhana-Karaoke-Group-110442127340269">
+                    <a class="nav-link" target="_blank" href="https://www.facebook.com/Swar-Sadhana-Karaoke-Group-110442127340269">
                         Join us on Facebook</a>
                 </li>
             </ul>
