--- a/Art.html
+++ b/Art.html
@@ -18,7 +18,7 @@
 <body>
 
 <header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar">
-    <a class="navbar-brand mr-0 mr-md-2" href="/swarsadhana/src/index.html">
+    <a class="navbar-brand mr-0 mr-md-2" href="/">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2">
             <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
