Added jumbotron images, and hyperlinks to cards descriptions in home page

--- a/index.html
+++ b/index.html
@@ -48,14 +48,24 @@
 
 <main role="main">
 
-    <section class="jumbotron text-center text-dark">
-        <div class="container">
-            <h1 class="jumbotron-heading">Subhash Phadke</h1>
-            <p class="lead">
-            <h5>Director, Artist, Music Lover, Grandfather</h5>
-            </p>
+    <section class="jumbotron text-dark">
+        <div class="row justify-content-start align-items-center">
+            <div class="col-2">
+                <img src="resources/Subhash-1.png" alt="" class="img-fluid">
+            </div>
 
+            <div class="col-8">
+                <h1 class="jumbotron-heading text-center">Subhash Phadke</h1>
+                <p class="lead">
+                <h5 class="text-center">Writer, Painter, Producer, Director, Singer, Grandfather</h5>
+                </p>
+            </div>
+
+            <div class="col-2">
+                <img src="resources/Subhash-2.jpg" alt="" class="img-fluid">
+            </div>
         </div>
+
     </section>
 
     <div class="card-group">
@@ -64,7 +74,9 @@
                 <img class="card-img-top" src="resources/Music.jpg">
             </a>
             <div class="card-body">
-                <h5 class="card-title text-center">Swar Sadhana</h5>
+                <a href="SwarSadhana.html">
+                    <h5 class="card-title text-center">Swar Sadhana</h5>
+                </a>
                 <p class="card-text text-center">Checkout Our Karaoke Group Of Enthusiastic Singers</p>
             </div>
 
@@ -74,7 +86,9 @@
                 <img class="card-img-top" src="resources/Art.jpg" href="Art.html">
             </a>
             <div class="card-body">
-                <h5 class="card-title text-center">Art</h5>
+                <a href="SwarSadhana.html">
+                    <h5 class="card-title text-center">Art</h5>
+                </a>
                 <p class="card-text text-center">Browse Through My Art Collection</p>
             </div>
 
@@ -84,7 +98,9 @@
                 <img class="card-img-top" src="resources/Movies.jpg" href="Movies.html">
             </a>
             <div class="card-body">
-                <h5 class="card-title text-center">Movies</h5>
+                <a href="SwarSadhana.html">
+                    <h5 class="card-title text-center">Movies</h5>
+                </a>
                 <p class="card-text text-center">My Movies</p>
             </div>
 
