Added additional Art - Flower-Vase, Rekha, Horses

--- a/Art.html
+++ b/Art.html
@@ -73,7 +73,9 @@
                                 <!--<p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span-->
                                 <!--class="font-weight-bold">JPG</span></p>-->
                                 <div class="badge badge-danger px-3 rounded-pill font-weight-normal">Oil Painting</div>
+                                <div class="badge badge-secondary px-3 rounded-pill font-weight-normal">Not for Sale</div>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -92,12 +94,14 @@
                             <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
                                 <!--<p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span-->
                                 <!--class="font-weight-bold">JPG</span></p>-->
-                                <div class="badge badge-danger px-3 rounded-pill font-weight-normal">Oil Painting</div>
+                                <div class="badge badge-warning px-3 rounded-pill font-weight-normal">Pencil Color</div>
+                                <div class="badge badge-secondary px-3 rounded-pill font-weight-normal">Not for Sale</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- End -->
+
                 <!-- Gallery item -->
                 <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
                     <div class="bg-white rounded shadow-sm"><img
@@ -111,6 +115,47 @@
                                 <!--<p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span-->
                                 <!--class="font-weight-bold">JPG</span></p>-->
                                 <div class="badge badge-danger px-3 rounded-pill font-weight-normal">Oil Painting</div>
+                                <div class="badge badge-secondary px-3 rounded-pill font-weight-normal">Not for Sale</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End -->
+
+                <!-- Gallery item -->
+                <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                    <div class="bg-white rounded shadow-sm"><img
+                            src="resources/Flower-Vase.png"
+                            alt="" class="img-fluid card-img-top">
+                        <div class="p-4">
+                            <h5><a target="_blank" href="resources/Flower-Vase.png" class="text-dark">Flower-Vase</a></h5>
+                            <!--<p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing-->
+                            <!--elit</p>-->
+                            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                                <!--<p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span-->
+                                <!--class="font-weight-bold">JPG</span></p>-->
+                                <div class="badge badge-info px-3 rounded-pill font-weight-normal">Cement</div>
+                                <div class="badge badge-secondary px-3 rounded-pill font-weight-normal">Not for Sale</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End -->
+
+                <!-- Gallery item -->
+                <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                    <div class="bg-white rounded shadow-sm"><img
+                            src="resources/Horses-copy.jpg"
+                            alt="" class="img-fluid card-img-top">
+                        <div class="p-4">
+                            <h5><a target="_blank" href="resources/Horses-copy.jpg" class="text-dark">Horses</a></h5>
+                            <!--<p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing-->
+                            <!--elit</p>-->
+                            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                                <!--<p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span-->
+                                <!--class="font-weight-bold">JPG</span></p>-->
+                                <div class="badge badge-danger px-3 rounded-pill font-weight-normal">Oil Color</div>
+                                <div class="badge badge-secondary px-3 rounded-pill font-weight-normal">Not for Sale</div>
                             </div>
                         </div>
                     </div>
@@ -130,6 +175,27 @@
                                 <!--<p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span-->
                                 <!--class="font-weight-bold">JPG</span></p>-->
                                 <div class="badge badge-primary px-3 rounded-pill font-weight-normal">Water Color</div>
+                                <div class="badge badge-secondary px-3 rounded-pill font-weight-normal">Not for Sale</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End -->
+
+                <!-- Gallery item -->
+                <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                    <div class="bg-white rounded shadow-sm"><img
+                            src="resources/Rekha-copy.jpg"
+                            alt="" class="img-fluid card-img-top">
+                        <div class="p-4">
+                            <h5><a target="_blank" href="resources/Rekha-copy.jpg" class="text-dark">Rekha</a></h5>
+                            <!--<p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing-->
+                            <!--elit</p>-->
+                            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                                <!--<p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span-->
+                                <!--class="font-weight-bold">JPG</span></p>-->
+                                <div class="badge badge-dark px-3 rounded-pill font-weight-normal">Charcoal</div>
+                                <div class="badge badge-secondary px-3 rounded-pill font-weight-normal">Not for Sale</div>
                             </div>
                         </div>
                     </div>
