Fixed Movies and Art links on Index page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img class="card-img-top" src="resources/Art.jpg" href="Art.html">
             </a>
             <div class="card-body">
-                <a href="SwarSadhana.html">
+                <a href="Art.html">
                     <h5 class="card-title text-center">Art</h5>
                 </a>
                 <p class="card-text text-center">Browse Through My Art Collection</p>
@@ -98,7 +98,7 @@
                 <img class="card-img-top" src="resources/Movies.jpg" href="Movies.html">
             </a>
             <div class="card-body">
-                <a href="SwarSadhana.html">
+                <a href="Movies.html">
                     <h5 class="card-title text-center">Movies</h5>
                 </a>
                 <p class="card-text text-center">My Movies</p>
