Replace jumbotron with d-flex on index page

--- a/index.html
+++ b/index.html
@@ -47,26 +47,20 @@
 
 
 <main role="main">
-
-    <section class="jumbotron text-dark">
-        <div class="row justify-content-start align-items-center">
-            <div class="col-2">
-                <img src="resources/Subhash-1.png" alt="" class="img-fluid">
-            </div>
-
-            <div class="col-8">
-                <h1 class="jumbotron-heading text-center">Subhash Phadke</h1>
-                <p class="lead">
-                <h5 class="text-center">Writer, Painter, Producer, Director, Singer, Grandfather</h5>
-                </p>
-            </div>
-
-            <div class="col-2">
-                <img src="resources/Subhash-2.jpg" alt="" class="img-fluid">
-            </div>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="p-2">
+            <img src="resources/Subhash-1.png" alt="" class="img-fluid">
         </div>
 
-    </section>
+        <div class="p-8">
+            <h1 class="text-center">Subhash Phadke</h1>
+            <h5 class="text-center">Writer, Painter, Producer, Director, Singer, Grandfather</h5>
+        </div>
+
+        <div class="p-2">
+            <img src="resources/Subhash-2.jpg" alt="" class="img-fluid">
+        </div>
+    </div>
 
     <div class="card-group">
         <div class="card">
@@ -103,7 +97,6 @@
                 </a>
                 <p class="card-text text-center">My Movies</p>
             </div>
-
         </div>
     </div>
 
