Added 19th episode of Swar Sadhana

--- a/SwarSadhana.html
+++ b/SwarSadhana.html
@@ -71,9 +71,21 @@
 
     <div class="album py-5 bg-light">
         <div class="container">
-
             <div class="row">
-
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zIkuCi6DUDo"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text  ">
+                            <div class="text-primary text-center">Episode: 19</div>
+                            <div class="text-dark text-center">Bilingual Language Hindi Songs</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -88,7 +100,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -103,7 +114,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -118,7 +128,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -133,7 +142,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -144,21 +152,6 @@
                             <p class="card-text  ">
                             <div class="text-primary text-center">Episode: 14</div>
                             <div class="text-dark text-center">Five Elements</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sagpLTG-Tg8"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text  ">
-                            <div class="text-primary text-center">Episode: 13</div>
-                            <div class="text-dark text-center"></div>
                             </p>
                         </div>
                     </div>
